<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    tools:context=".MainActivity"
    android:background="#3E4F81"
    >

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:srcCompat="@drawable/dicee_logo"
        android:contentDescription="@string/logo_description" />

    <LinearLayout
        android:id="@+id/dice_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_below="@id/img_logo"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/computer"
                android:textColor="#FFEB3B"
                android:textSize="25sp"></TextView>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="25sp"
                android:textColor="#FF9800"
                android:layout_height="wrap_content"
                android:text="@string/you">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/img_dice_left"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="120dp"
                android:src="@drawable/dice1"
                android:contentDescription="@string/dice_image" />

            <ImageView
                android:id="@+id/img_dice_right"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="120dp"
                android:src="@drawable/dice3"
                android:contentDescription="@string/dice_image" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btn_roll_higher"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:paddingLeft="17dp"
                android:paddingTop="12dp"
                android:paddingRight="20dp"
                android:paddingBottom="12dp"
                android:text="@string/higher"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="16sp"
                app:backgroundTint="#FFC107"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_roll_lower"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:paddingLeft="17dp"
                android:paddingTop="12dp"
                android:paddingRight="20dp"
                android:paddingBottom="12dp"
                android:text="@string/lower"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="16sp"
                app:backgroundTint="#E91E63"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <ImageView
            android:id="@+id/img_result"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_height="wrap_content">
        </ImageView>

    </LinearLayout>
</RelativeLayout>